--- a/notebooks/gemma-predict.ipynb
+++ b/notebooks/gemma-predict.ipynb
@@ -11,9 +11,7 @@
     "# ! pip install pip3-autoremove\n",
     "# ! pip-autoremove torch torchvision torchaudio -y\n",
     "# ! pip install torch xformers triton\n",
-    "# ! pip install \"unsloth[kaggle-new] @ git+https://github.com/unslothai/unsloth.git\"\n",
-    "# ! pip install unsloth\n",
-    "# ! pip install --no-deps --upgrade \"flash-attn>=2.6.3\""
+    "# ! pip install \"unsloth[kaggle-new] @ git+https://github.com/unslothai/unsloth.git\""
    ]
   },
   {
@@ -467,152 +465,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "877bb5e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train split:\n",
-      "  Min training samples: 1\n",
-      "  Max training samples: 10\n",
-      "  Avg training samples: 3.24\n",
-      "\n",
-      "Val split:\n",
-      "  Min training samples: 1\n",
-      "  Max training samples: 7\n",
-      "  Avg training samples: 3.16\n",
-      "\n",
-      "Test split:\n",
-      "  Min training samples: 1\n",
-      "  Max training samples: 7\n",
-      "  Avg training samples: 3.18\n",
-      "\n",
-      "Predict split:\n",
-      "  Min training samples: 1\n",
-      "  Max training samples: 8\n",
-      "  Avg training samples: 3.13\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate min, max, and avg number of training samples per dataset record for each split\n",
-    "\n",
-    "def calculate_training_samples_stats(dataset_split):\n",
-    "    training_samples_counts = [len(challenge['train']) for challenge in dataset_split['challenge']]\n",
-    "    return {\n",
-    "        'min': min(training_samples_counts),\n",
-    "        'max': max(training_samples_counts),\n",
-    "        'avg': sum(training_samples_counts) / len(training_samples_counts)\n",
-    "    }\n",
-    "\n",
-    "splits = ['train', 'val', 'test', 'predict']\n",
-    "for split in splits:\n",
-    "    stats = calculate_training_samples_stats(dataset[split])\n",
-    "    print(f\"{split.capitalize()} split:\")\n",
-    "    print(f\"  Min training samples: {stats['min']}\")\n",
-    "    print(f\"  Max training samples: {stats['max']}\")\n",
-    "    print(f\"  Avg training samples: {stats['avg']:.2f}\")\n",
-    "    print()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "3a769215",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 430/430 [00:00<00:00, 978.28 examples/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 train tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered train dataset contains 430 tasks for fine-tuning.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 138/138 [00:00<00:00, 680.78 examples/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 val tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered val dataset contains 138 tasks for evaluation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 321/321 [00:00<00:00, 678.82 examples/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 test tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered test dataset contains 321 tasks for evaluation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Filter: 100%|██████████| 112/112 [00:00<00:00, 1034.29 examples/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 predict tasks were filtered out because they exceed the 6144 token limit.\n",
-      "The filtered predict dataset contains 112 tasks for evaluation.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "def filter_dataset_by_token_limit(dataset, max_seq_length):\n",
-    "    def filter_split(split_name):\n",
-    "        filtered_split = dataset[split_name].filter(lambda x: count_tokens(x['texts']) <= max_seq_length)\n",
-    "        filtered_out_tasks = len(dataset[split_name]) - len(filtered_split)\n",
-    "        return filtered_split, filtered_out_tasks\n",
-    "\n",
-    "    filtered_splits = {}\n",
-    "    for split in ['train', 'val', 'test', 'predict']:\n",
-    "        filtered_splits[split], filtered_out_tasks = filter_split(split)\n",
-    "        print(f\"{filtered_out_tasks} {split} tasks were filtered out because they exceed the {max_seq_length} token limit.\")\n",
-    "        print(f\"The filtered {split} dataset contains {len(filtered_splits[split])} tasks for {'fine-tuning' if split == 'train' else 'evaluation'}.\")\n",
-    "\n",
-    "    return filtered_splits\n",
-    "\n",
-    "filtered_dataset = filter_dataset_by_token_limit(dataset, MAX_SEQ_LENGTH)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "id": "f5686a097ef10973",
    "metadata": {},
@@ -783,314 +635,6 @@
     "    generated_texts2 = tokenizer.batch_decode(new_tokens2, skip_special_tokens=True)\n",
     "    \n",
     "    return generated_texts1, generated_texts2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "217070e6743f193f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@eval\n",
-    "def evaluate(model, tokenizer, dataset, batch_size):\n",
-    "    eval_dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=False, collate_fn=collate(mode='test', tokenizer=tokenizer))\n",
-    "\n",
-    "    challenge_ids = []\n",
-    "    preds = []\n",
-    "    labels = []\n",
-    "    for i, batch in tqdm(enumerate(eval_dataloader), total=len(eval_dataloader)):\n",
-    "        generated_texts1, generated_texts2 = evaluate_batch(model, tokenizer, batch)\n",
-    "\n",
-    "        # Ensure solutions is always a list\n",
-    "        ids = batch[\"id\"]\n",
-    "        challenges = batch[\"challenge\"]\n",
-    "        solutions = batch[\"solution\"]\n",
-    "\n",
-    "        # I don't like how complicated this is, but I don't see an easier way to do it right now\n",
-    "        for gen_text1, gen_text2, label, challenge_id, challenge in zip(generated_texts1, generated_texts2, solutions, ids, challenges):\n",
-    "            parsed_output1 = parse_output(gen_text1)\n",
-    "            parsed_output2 = parse_output(gen_text2)\n",
-    "            \n",
-    "            if parsed_output1 is None and parsed_output2 is None:\n",
-    "                print(f\"Failed to parse both outputs: {gen_text1} and {gen_text2}\")\n",
-    "                preds.append(None)\n",
-    "            else:\n",
-    "                # Choose the best prediction based on partial match score\n",
-    "                score1 = calculate_partial_match(parsed_output1, tensor_to_int(label)) if parsed_output1 is not None else 0\n",
-    "                score2 = calculate_partial_match(parsed_output2, tensor_to_int(label)) if parsed_output2 is not None else 0\n",
-    "                best_pred = parsed_output1 if score1 >= score2 else parsed_output2\n",
-    "                preds.append(best_pred)\n",
-    "            \n",
-    "            labels.append(tensor_to_int(label))\n",
-    "            challenge_ids.append((challenge_id, challenge['order']))\n",
-    "\n",
-    "    return {\n",
-    "        'ids': challenge_ids,\n",
-    "        'preds': preds,\n",
-    "        'labels': labels,\n",
-    "    }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af75db5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = evaluate(model, tokenizer, dataset['test'], batch_size=1)\n",
-    "# Calculate metrics\n",
-    "accuracy, avg_partial_match = calculate_metrics(results['preds'], results['labels'])\n",
-    "\n",
-    "log.info(f\"Exact match accuracy: {accuracy:.4f}\")\n",
-    "log.info(f\"Average partial match score: {avg_partial_match:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "0d8c732b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def compute_metrics(pred):\n",
-    "#     labels = pred.label_ids\n",
-    "#     preds = pred.predictions.argmax(-1)\n",
-    "#     ..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "c9a1d37f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@train\n",
-    "def training(model, tokenizer, dataset, max_seq_length):\n",
-    "    trainer = SFTTrainer(\n",
-    "        model=model,\n",
-    "        tokenizer=tokenizer,\n",
-    "        train_dataset=dataset['train'],\n",
-    "        eval_dataset=dataset['val'],\n",
-    "        dataset_text_field=\"texts\",\n",
-    "        max_seq_length=max_seq_length,\n",
-    "        dataset_num_proc=2,\n",
-    "        packing=False,  # Can make training 5x faster for short sequences.\n",
-    "        args=TrainingArguments(\n",
-    "            per_device_train_batch_size=2,\n",
-    "            per_device_eval_batch_size=2,\n",
-    "            gradient_accumulation_steps=4,\n",
-    "            eval_strategy='steps',\n",
-    "            eval_steps=100,\n",
-    "            logging_steps=100,\n",
-    "            # num_train_epochs=1,  # Set this for 1 full training run.\n",
-    "            warmup_steps = 5,\n",
-    "            max_steps = 500,\n",
-    "            learning_rate=2e-5,\n",
-    "            fp16=not is_bfloat16_supported(),\n",
-    "            bf16=is_bfloat16_supported(),\n",
-    "            optim=\"adamw_8bit\",\n",
-    "            weight_decay=0.01,\n",
-    "            lr_scheduler_type=\"linear\",\n",
-    "            seed=3407,\n",
-    "            output_dir=f\"{BASE_PATH}/models/gemma-2-2b-it\",\n",
-    "            # save_strategy='no',\n",
-    "            save_strategy='steps',\n",
-    "            save_steps=250,\n",
-    "            save_total_limit=2,\n",
-    "        ),\n",
-    "        # compute_metrics=compute_metrics\n",
-    "    )\n",
-    "    stats = trainer.train()\n",
-    "    return trainer, stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "ff3a7382",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map (num_proc=2): 100%|██████████| 430/430 [00:01<00:00, 274.16 examples/s]\n",
-      "Map (num_proc=2): 100%|██████████| 138/138 [00:01<00:00, 89.20 examples/s] \n",
-      "max_steps is given, it will override any value given in num_train_epochs\n",
-      "==((====))==  Unsloth - 2x faster free finetuning | Num GPUs = 1\n",
-      "   \\\\   /|    Num examples = 430 | Num Epochs = 10\n",
-      "O^O/ \\_/ \\    Batch size per device = 2 | Gradient Accumulation steps = 4\n",
-      "\\        /    Total batch size = 8 | Total steps = 500\n",
-      " \"-____-\"     Number of trainable parameters = 20,766,720\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='500' max='500' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [500/500 53:08, Epoch 9/10]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Step</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>100</td>\n",
-       "      <td>0.453300</td>\n",
-       "      <td>0.306030</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>200</td>\n",
-       "      <td>0.302100</td>\n",
-       "      <td>0.290039</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>300</td>\n",
-       "      <td>0.272700</td>\n",
-       "      <td>0.281183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>400</td>\n",
-       "      <td>0.255700</td>\n",
-       "      <td>0.276471</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>500</td>\n",
-       "      <td>0.253400</td>\n",
-       "      <td>0.274622</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "TrainOutput(global_step=500, training_loss=0.30743975448608396, metrics={'train_runtime': 3207.7401, 'train_samples_per_second': 1.247, 'train_steps_per_second': 0.156, 'total_flos': 1.2082800391782912e+17, 'train_loss': 0.30743975448608396, 'epoch': 9.30232558139535})"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trainer, stats = training(model, tokenizer, dataset, max_seq_length=MAX_SEQ_LENGTH)\n",
-    "stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "42e8807e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|█████████ | 289/321 [1:58:54<26:11, 49.11s/it]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Failed to parse both outputs: <output>\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "111111111111111111111111111111111111111\n",
-      "888888888888888888888888888888888888888\n",
-      "00000088888888888888888888888888888888\n",
-      "00000088888888888888888888888888888888\n",
-      "00000088888888888888888888888888888888\n",
-      "00000088888888888888888888888888888888\n",
-      "00000088888888888888888888888888888888\n",
-      "00000088888888888888888888888888888888\n",
-      "</output> and <output>\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "000000000000000000000000000000\n",
-      "111111111111111111111111111111111111111111111111111111111111111\n",
-      "8888888888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "0000008888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "0000008888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "0000008888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "0000008888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "0000008888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "0000008888888888888888888888888888888888888888888888888888888888888888888888888\n",
-      "</output>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 321/321 [2:09:35<00:00, 24.22s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = evaluate(model, tokenizer, dataset['test'], batch_size=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "bb9d8e78",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exact match accuracy: 0.0156\n",
-      "Average partial match score: 0.5401\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate metrics\n",
-    "accuracy, avg_partial_match = calculate_metrics(results['preds'], results['labels'])\n",
-    "\n",
-    "log.info(f\"Exact match accuracy: {accuracy:.4f}\")\n",
-    "log.info(f\"Average partial match score: {avg_partial_match:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "932124f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer.save_model(f\"{BASE_PATH}/models/short-finetune/gemma-2-2b-it\")"
    ]
   },
   {
@@ -12143,7 +11687,10 @@
    "id": "4c6109ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('submission.json', 'w') as json_file:\n",
+    "    json.dump(grouped_preds, json_file) "
+   ]
   }
  ],
  "metadata": {
