--- a/notebooks/gemma-submission.ipynb
+++ b/notebooks/gemma-submission.ipynb
@@ -7,29 +7,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "# ! pip install pip3-autoremove\n",
-    "# ! pip-autoremove torch torchvision torchaudio -y\n",
-    "# ! pip install torch xformers triton\n",
-    "# ! pip install \"unsloth[kaggle-new] @ git+https://github.com/unslothai/unsloth.git\""
+    "%env HF_DATASETS_OFFLINE=1\n",
+    "%env HF_HUB_OFFLINE=1\n",
+    "%env TRANSFORMERS_OFFLINE=1\n",
+    "%env TOKENIZERS_PARALLELISM=false\n",
+    "%env CUDA_VISIBLE_DEVICES=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "df5c9ea186d5046a",
+   "execution_count": null,
+   "id": "999ae959",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: CUDA_VISIBLE_DEVICES=1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%env CUDA_VISIBLE_DEVICES=1"
+    "deps_path = \"/kaggle/input/unsloth-gemma/archive\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4651ea66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "! pip install --no-index --find-links {deps_path} pip3-autoremove -y\n",
+    "! pip-autoremove torch -y\n",
+    "! pip install --no-index --find-links {deps_path} torch\n",
+    "! pip install --no-index --find-links {deps_path} triton\n",
+    "! pip install --no-index --find-links {deps_path} \"unsloth[kaggle-new]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8e88af6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%capture\n",
+    "# deps_path_2 = '/kaggle/input/llama-3-arc-deps'\n",
+    "# ! pip install --no-index --find-links {deps_path_2} --requirement {deps_path_2}/requirements.txt"
    ]
   },
   {
@@ -39,40 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_PATH = '/home/stepan/kaggle-arc-agi'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "2082de4ba001df2d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "print(os.getenv('CUDA_VISIBLE_DEVICES'))\n",
-    "os.environ['TOKENIZERS_PARALLELISM'] = 'false'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "5d515f651d366f5e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(BASE_PATH)\n",
-    "sys.path.append(f'{BASE_PATH}/scripts')"
+    "BASE_PATH = '/kaggle/input/arc-prize-2024'\n",
+    "MODEL_ID = '/kaggle/input/gemma-2-2b-it-baseline/pytorch/default/1/checkpoint-500'\n",
+    "MAX_NEW_TOKENS = 2048\n",
+    "MAX_SEQ_LENGTH = 8192 - MAX_NEW_TOKENS"
    ]
   },
   {
@@ -106,35 +95,9 @@
     "\n",
     "from datasets import DatasetDict, Dataset # type: ignore\n",
     "\n",
-    "from unsloth import FastLanguageModel # type: ignore\n",
-    "\n",
     "from tqdm.auto import tqdm # type: ignore\n",
     "\n",
-    "from trl import SFTTrainer # type: ignore\n",
-    "from transformers import TrainingArguments # type: ignore\n",
-    "from unsloth import is_bfloat16_supported # type: ignore\n",
-    "\n",
-    "from logger import get_logger # type: ignore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "31950c8f19e622c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log = get_logger(f'{BASE_PATH}/logs/gemma-2-2b', 'arc-agi')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "8599147d39964c61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device_id = 0"
+    "from transformers import AutoTokenizer, AutoModelForCausalLM # type: ignore"
    ]
   },
   {
@@ -144,86 +107,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model_tokenizer(max_seq_length=1024, dtype=None, load_in_4bit=True, add_lora=False):\n",
-    "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
-    "        model_name=\"unsloth/gemma-2-2b-it\",\n",
-    "        # model_name=f\"{BASE_PATH}/models/gemma-2-2b-it/checkpoint-500\",\n",
-    "        max_seq_length=max_seq_length,\n",
-    "        dtype=dtype,\n",
-    "        load_in_4bit=load_in_4bit,\n",
-    "        device_map={'': 0},\n",
-    "        # attn_implementation='flash_attention_2',\n",
-    "        # token = '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', # use one if using gated models like meta-llama/Llama-2-7b-hf\n",
+    "def get_model_tokenizer(max_seq_length, load_in_4bit=True):\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(MODEL_ID, padding_side='left')\n",
+    "    model = AutoModelForCausalLM.from_pretrained(\n",
+    "        MODEL_ID, \n",
+    "        attn_implementation='flash_attention_2',\n",
+    "        torch_dtype=torch.bfloat16,\n",
+    "        device_map=\"auto\",\n",
     "    )\n",
+    "    \n",
+    "    model.eval()\n",
+    "    \n",
+    "    model.generation_config.cache_implementation = \"static\"\n",
     "\n",
-    "    if add_lora:\n",
-    "        model = FastLanguageModel.get_peft_model(\n",
-    "            model,\n",
-    "            r=16,  # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
-    "            target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
-    "                            \"gate_proj\", \"up_proj\", \"down_proj\", ],\n",
-    "            lora_alpha=16,\n",
-    "            lora_dropout=0,  # Supports any, but = 0 is optimized\n",
-    "            bias=\"none\",  # Supports any, but = \"none\" is optimized\n",
-    "            # [NEW] \"unsloth\" uses 30% less VRAM, fits 2x larger batch sizes!\n",
-    "            use_gradient_checkpointing=\"unsloth\",  # True or \"unsloth\" for very long context\n",
-    "            random_state=3407,\n",
-    "            use_rslora=False,  # We support rank stabilized LoRA\n",
-    "            loftq_config=None,  # And LoftQ\n",
-    "        )\n",
-    "\n",
-    "    # tokenizer.truncation_side = 'left'\n",
-    "    # tokenizer.padding_side = 'left'\n",
+    "    model.forward = torch.compile(model.forward, mode=\"reduce-overhead\", fullgraph=True)\n",
     "\n",
     "    return model, tokenizer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "da726f0b32fd2573",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def eval(f):\n",
-    "    def wrapper(model, tokenizer, *args, **kwargs):\n",
-    "        FastLanguageModel.for_inference(model)\n",
-    "        log.info(f\"Evaluating model {model}, tokenizer {tokenizer.padding_side}\")\n",
-    "        return f(model, tokenizer, *args, **kwargs)\n",
-    "\n",
-    "    return wrapper\n",
-    "\n",
-    "\n",
-    "def train(f):\n",
-    "    def wrapper(model, tokenizer, *args, **kwargs):\n",
-    "        FastLanguageModel.for_training(model)\n",
-    "        log.info(f\"Training model {model}, tokenizer {tokenizer.padding_side}\")\n",
-    "        return f(model, tokenizer, *args, **kwargs)\n",
-    "\n",
-    "    return wrapper"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "53fadbbd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6144"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MAX_NEW_TOKENS = 2048\n",
-    "MAX_SEQ_LENGTH = 8192 - MAX_NEW_TOKENS\n",
-    "MAX_SEQ_LENGTH"
    ]
   },
   {
@@ -606,35 +505,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_with_temp(model, inputs, temperature):\n",
-    "    outputs = model.generate(\n",
-    "        **inputs, \n",
-    "        max_new_tokens=MAX_NEW_TOKENS, \n",
-    "        do_sample=True, \n",
-    "        temperature=temperature,\n",
-    "        top_k=50\n",
-    "    )\n",
-    "    return outputs\n",
-    "\n",
-    "\n",
-    "def evaluate_batch(model, tokenizer, batch):\n",
+    "def evaluate_batch(model, tokenizer, batch, num_seq=5):\n",
     "    inputs = {\n",
     "        'input_ids': batch['input_ids'],\n",
     "        'attention_mask': batch['attention_mask']\n",
     "    }\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        outputs1 = generate_with_temp(model, inputs, 0.3)\n",
-    "        outputs2 = generate_with_temp(model, inputs, 0.7)\n",
+    "        outputs = model.generate(\n",
+    "            **inputs, \n",
+    "            max_new_tokens=MAX_NEW_TOKENS, \n",
+    "            do_sample=True, \n",
+    "            use_cache=True, \n",
+    "            num_beams=5, \n",
+    "            num_return_sequences=num_seq, \n",
+    "            temperature=0.5, \n",
+    "            top_k=50\n",
+    "        )\n",
     "\n",
     "    input_ids_length = inputs['input_ids'].shape[1] # sequence length without new tokens\n",
-    "    new_tokens1 = outputs1[:, input_ids_length:]\n",
-    "    new_tokens2 = outputs2[:, input_ids_length:]\n",
+    "    new_tokens = outputs[:, input_ids_length:]\n",
     "    \n",
-    "    generated_texts1 = tokenizer.batch_decode(new_tokens1, skip_special_tokens=True)\n",
-    "    generated_texts2 = tokenizer.batch_decode(new_tokens2, skip_special_tokens=True)\n",
+    "    generated_texts = tokenizer.batch_decode(new_tokens, skip_special_tokens=True)\n",
     "    \n",
-    "    return generated_texts1, generated_texts2"
+    "    return generated_texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1948f2d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_sequences(generated_texts, num_seq):\n",
+    "    parsed_outputs = [parse_output(text) for text in generated_texts]\n",
+    "    res = []\n",
+    "    for i in range(0, len(parsed_outputs), num_seq):\n",
+    "        options = [opt for opt in parsed_outputs[i:i + num_seq] if opt is not None]\n",
+    "        if not options:\n",
+    "            res.append((None, None))\n",
+    "            continue\n",
+    "        \n",
+    "        # Group options by their structure (rows x columns)\n",
+    "        structure_groups = {}\n",
+    "        for option in options:\n",
+    "            rows = len(option)\n",
+    "            cols = len(option[0]) if rows > 0 else 0\n",
+    "            structure = (rows, cols)\n",
+    "            if structure not in structure_groups:\n",
+    "                structure_groups[structure] = []\n",
+    "            structure_groups[structure].append(option)\n",
+    "        \n",
+    "        # Select the group with the most options\n",
+    "        most_common_structure = max(structure_groups, key=lambda x: len(structure_groups[x]))\n",
+    "        selected_options = structure_groups[most_common_structure]\n",
+    "        \n",
+    "        # Get dimensions of the most common structure\n",
+    "        rows, cols = most_common_structure\n",
+    "        \n",
+    "        # Perform element-wise voting\n",
+    "        voted_option = [[None for _ in range(cols)] for _ in range(rows)]\n",
+    "        for row in range(rows):\n",
+    "            for col in range(cols):\n",
+    "                elements = [option[row][col] for option in selected_options]\n",
+    "                voted_option[row][col] = max(set(elements), key=elements.count)\n",
+    "        \n",
+    "        # Select the top 2 options based on similarity to the voted option\n",
+    "        def similarity_score(option):\n",
+    "            return sum(option[r][c] == voted_option[r][c] for r in range(rows) for c in range(cols))\n",
+    "        \n",
+    "        top_2_options = sorted(selected_options, key=similarity_score, reverse=True)[:2]\n",
+    "        res.append(tuple(top_2_options)) # TODO this or top2 + voted\n",
+    "    return res"
    ]
   },
   {
@@ -645,18 +588,20 @@
    "outputs": [],
    "source": [
     "@eval\n",
-    "def predict(model, tokenizer, dataset, batch_size):\n",
+    "def predict(model, tokenizer, dataset, batch_size, num_seq=5):\n",
     "    eval_dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=False, collate_fn=collate(mode='predict', tokenizer=tokenizer))\n",
     "\n",
     "    challenge_ids = []\n",
     "    preds = []\n",
     "    for i, batch in tqdm(enumerate(eval_dataloader), total=len(eval_dataloader)):\n",
-    "        generated_texts1, generated_texts2 = evaluate_batch(model, tokenizer, batch)\n",
+    "        generated_texts = evaluate_batch(model, tokenizer, batch, num_seq=num_seq) # (batch_size * num_return_sequences, seq_len)\n",
+    "\n",
+    "        processed_outputs = process_sequences(generated_texts, num_seq)\n",
     "\n",
     "        ids = batch[\"id\"]\n",
     "        challenges = batch[\"challenge\"]\n",
     "        \n",
-    "        for gen_text1, gen_text2, challenge_id, challenge in zip(generated_texts1, generated_texts2, ids, challenges):\n",
+    "        for (gen_text1, gen_text2), challenge_id, challenge in zip(processed_outputs, ids, challenges):\n",
     "            parsed_output1 = parse_output(gen_text1)\n",
     "            parsed_output2 = parse_output(gen_text2)\n",
     "            \n",
@@ -11656,8 +11601,7 @@
    ],
    "source": [
     "pred_results = predict(model, tokenizer, dataset['predict'], batch_size=1)\n",
-    "grouped_preds = group_preds_by_challenge_id(pred_results['ids'], pred_results['preds'])\n",
-    "grouped_preds"
+    "grouped_preds = group_preds_by_challenge_id(pred_results['ids'], pred_results['preds'])"
    ]
   },
   {
