minor notebook fixes

--- a/notebooks/gemma/gemma-predict.ipynb
+++ b/notebooks/gemma/gemma-predict.ipynb
@@ -79,10 +79,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model_tokenizer(max_seq_length=1024, dtype=None, load_in_4bit=True):\n",
+    "def get_model_tokenizer(dtype=None, load_in_4bit=True):\n",
     "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "        model_name=f\"{BASE_PATH}/models/gemma-2-2b-it/baseline\",\n",
-    "        max_seq_length=max_seq_length,\n",
+    "        max_seq_length=MAX_SEQ_LENGTH,\n",
     "        dtype=dtype,\n",
     "        load_in_4bit=load_in_4bit,\n",
     "        device_map={\"\": 0},\n",
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model, tokenizer = get_model_tokenizer(max_seq_length=MAX_SEQ_LENGTH)"
+    "model, tokenizer = get_model_tokenizer()"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True)\n",
+    "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True, base_path=BASE_PATH)\n",
     "dataset"
    ]
   },
