--- a/notebooks/gemma/gemma.ipynb
+++ b/notebooks/gemma/gemma.ipynb
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True)\n",
+    "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True, base_path=BASE_PATH)\n",
     "dataset"
    ]
   },
