--- a/notebooks/gemma/gemma-multi-inference.ipynb
+++ b/notebooks/gemma/gemma-multi-inference.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "! pip install --no-deps --upgrade \"flash-attn>=2.6.3\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%env CUDA_VISIBLE_DEVICES=1\n",
     "%env TOKENIZERS_PARALLELISM=false"
    ]
@@ -80,6 +89,8 @@
     "        torch_dtype=torch.bfloat16,\n",
     "        device_map={\"\": 0},\n",
     "    )\n",
+    "    \n",
+    "    model.eval()\n",
     "\n",
     "    return model, tokenizer"
    ]
@@ -100,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True)\n",
+    "dataset = data_utils.prepare_dataset(tokenizer, fit_dataset=True, base_path=BASE_PATH)\n",
     "dataset"
    ]
   },
@@ -236,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = evaluate(model, tokenizer, dataset[\"test\"], batch_size=1)\n",
+    "results = evaluate(model, tokenizer, dataset[\"test\"], batch_size=1, num_seq=3)\n",
     "# Calculate metrics\n",
     "accuracy, avg_partial_match = train_utils.calculate_metrics(results[\"preds\"], results[\"labels\"])\n",
     "\n",
@@ -268,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
